# coffee-report

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_data.csv
data/: test_data.csv
src/: __init__.py
src/coffee_report/: cli.py  formatter.py  loader.py  main.py  models.py
src/coffee_report/reports/: __init__.py  base.py  median_coffee.py  registry.py
tests/: test_cli.py  test_formatter.py  test_integration.py  test_loader.py  test_median_coffee.py  test_registry.py
